--- a/config/default.yml
+++ b/config/default.yml
@@ -12,7 +12,7 @@ AllCops:
   # Exclude:
   #    - '**/'
   files/phpTags:
-    enabled: true
+    enabled: false
     description: >
       PHP code MUST use the long <?php ?> tags or the short-echo <?= ?> tags; it
       MUST NOT use the other tag variations.
