--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,2 +1,8 @@
 AllCops:
   TargetRubyVersion: 2.3
+
+Style/Encoding:
+  Enabled: true
+
+Style/FrozenStringLiteralComment:
+  EnforcedStyle: always
